--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/profileme.png" alt="ER sachin sharma">
+                        <img src="profileme.png" alt="ER sachin sharma">
                         <div class="text">Er.SACHIN SHARMA</div>
                         <p> Data scientist as well as Expert in Web Applications </p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/adarshbestprofile.png" alt="Er. adarsh">
+                        <img src="adarshbestprofile.png" alt="Er. adarsh">
                         <div class="text">Er.Adarsh Maurya</div>
                         <p>Expert in Data Structure and in Web Applications </p>
                     </div>
