--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/PROFILE SACHIN1.png" alt="">
+                    <img src="PROFILE SACHIN1.png" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm SACHIN and I'm a <span class="typing-2"></span></div>
@@ -197,7 +197,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/akashprofile.png" alt="er akash">
+                        <img src="akashprofile.png" alt="er akash">
                         <div class="text">ER_Akash kumar</div>
                         <p>Expert in Data Structure as well as Web Applications
                         </p>
@@ -205,14 +205,14 @@
                 </div>
                 <!-- <div class="card">
                     <div class="box">
-                        <img src="images/profile-4.jpeg" alt="">
+                        <img src="profile-4.jpeg" alt="">
                         <div class="text"> SOMEONE NAME </div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div> -->
                 <!-- </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile-5.jpeg" alt="">
+                        <img src="profile-5.jpeg" alt="">
                         <div class="text">Some one name </div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div> -->
